@@ -30,6 +30,7 @@ in either free or fixed form FORTRAN-->
 <EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">C</EOL_SPAN>
 <EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">!</EOL_SPAN>
 <EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">*</EOL_SPAN>
+<EOL_SPAN TYPE="COMMENT1">!</EOL_SPAN>
 <EOL_SPAN TYPE="COMMENT2" AT_LINE_START="TRUE">D</EOL_SPAN>
 
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="FALSE">
@@ -57,6 +58,7 @@ in either free or fixed form FORTRAN-->
 		<SEQ TYPE="OPERATOR">.ge.</SEQ>
 		<SEQ TYPE="OPERATOR">.AND.</SEQ>
 		<SEQ TYPE="OPERATOR">.OR.</SEQ>
+		<SEQ TYPE="OPERATOR">.NOT.</SEQ>
 
 <KEYWORDS>
 <!-- unclassified keywords -->
@@ -89,6 +91,7 @@ in either free or fixed form FORTRAN-->
 <KEYWORD1>CHARACTER</KEYWORD1> 
 <KEYWORD1>DIMENSION</KEYWORD1>
 <KEYWORD1>KIND</KEYWORD1>
+<KEYWORD1>COMMON</KEYWORD1>
 <!-- FORTRAN Statements -->
 <KEYWORD1>CASE</KEYWORD1>
 <KEYWORD1>SELECT</KEYWORD1>
